[gd_scene load_steps=6 format=3 uid="uid://dc2rkan1l8rv3"]

[ext_resource type="Shader" path="res://texture_rect.gdshader" id="1_0mo6u"]
[ext_resource type="Script" path="res://TextureManager.gd" id="2_r677i"]
[ext_resource type="Script" path="res://LifeCompute.gd" id="3_7i6xe"]
[ext_resource type="Script" path="res://UI.gd" id="4_tfa7u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v4b5d"]
shader = ExtResource("1_0mo6u")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LifeCompute" type="Node" parent="."]
script = ExtResource("3_7i6xe")

[node name="TextureManager" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_v4b5d")
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1023.0
offset_bottom = 1023.0
expand_mode = 1
script = ExtResource("2_r677i")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_tfa7u")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="randomise_button" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "randomise"

[node name="step_button" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "step"

[node name="Panel" type="Panel" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="run_button" type="CheckButton" parent="UI/VBoxContainer/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 16
text = "run"

[node name="VSlider" type="VSlider" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 16.0
min_value = 1.0
max_value = 8.0
step = 0.01
value = 1.0
exp_edit = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 512)

[connection signal="pressed" from="UI/VBoxContainer/randomise_button" to="UI" method="_on_randomise_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/step_button" to="UI" method="_on_step_button_pressed"]
[connection signal="toggled" from="UI/VBoxContainer/Panel/run_button" to="UI" method="_on_run_button_toggled"]
[connection signal="value_changed" from="UI/VSlider" to="UI" method="_on_h_slider_value_changed"]
